completed most of the ui elements, service, date&time and confirmation

--- a/index.html
+++ b/index.html
@@ -12,44 +12,108 @@
         <div class="reservation-container">
             <div class="sidebar">
                 <div class="progress">
-                    <div class="pinpoint success">
-                        <div class="pinpoint-order">1</div>
+                    <div class="pinpoint done">
                         <p class="pinpoint-label">Staff</p>
                     </div>
-                    <div class="pinpoint">
-                        <div class="pinpoint-order">2</div>
+                    <div class="pinpoint success">
                         <p class="pinpoint-label">Service</p>
                     </div>
                     <div class="pinpoint">
-                        <div class="pinpoint-order">3</div>
                         <p class="pinpoint-label">Date & Time</p>
                     </div>
                     <div class="pinpoint">
-                        <div class="pinpoint-order">4</div>
                         <p class="pinpoint-label">Confirmation</p>
                     </div>
                 </div>
+                <div class="bottom-space"></div>
             </div>
             <div class="content">
-                <div class="topBar">
+                <div class="content-top">
                     <h1 class="process-title">Select staff</h1>
-                    <div class="closeBtn">close</div>
                 </div>
-
                 <div class="content-main">
-                    <div class="option">
+                    <!-- Defaul Option -->
+                    <!-- <div class="option">
                         <div class="option-img">
-                            <img src="./images/alex.png" alt="Alex Rosetta">
+                            <img src="./images/alex.png" alt="Alex Rosetta" />
                         </div>
                         <div class="option-title">Alex Rosetta</div>
                         <div class="option-description">alexyrosetta@egmail.com</div>
-                    </div>
-                    <div class="option">
+                    </div> -->
+                    <!-- Option with Price -->
+                    <!-- <div class="option service">
                         <div class="option-img">
-                            <img src="./images/maria.png" alt="Alex Rosetta">
+                            <img src="./images/oral.png" alt="Alex Rosetta" />
                         </div>
-                        <div class="option-title">Maria July</div>
-                        <div class="option-description">mariajuly@egmail.com</div>
+                        <div class="option-title">Alex Rosetta</div>
+                        <div class="option-description">alexyrosetta@egmail.com</div>
+                        <div class="option-price">50$</div>
+                    </div> -->
+                    <div class="date">
+                        <div class="date-calendar">
+                            <div class="navigator">
+                                <div class="navigator-prev">
+                                    <img src="./images/left.svg" alt="Pervious month">
+                                </div>
+                                <div class="navigator-current">August 2023</div>
+                                <div class="navigator-next">
+                                    <img src="./images/right.svg" alt="Next month">
+                                </div>
+                            </div>
+                            <div class="date-calendar-main">
+                                <div class="weekdays">
+                                    <div class="weekday">Sun</div>
+                                    <div class="weekday">Mon</div>
+                                    <div class="weekday">Tue</div>
+                                    <div class="weekday">Wed</div>
+                                    <div class="weekday">Thu</div>
+                                    <div class="weekday">Fri</div>
+                                    <div class="weekday">Sat</div>
+                                </div>
+                                <div class="days">
+                                    <div class=""></div>
+                                    <div class="day">1</div>
+                                    <div class="day active">2</div>
+                                    <div class="day">3</div>
+                                    <div class="day">4</div>
+                                    <div class="day">1</div>
+                                    <div class="day">2</div>
+                                    <div class="day">3</div>
+                                    <div class="day">4</div>
+                                    <div class="day">1</div>
+                                    <div class="day">2</div>
+                                    <div class="day">3</div>
+                                    <div class="day">4</div>
+                                    <div class="day">1</div>
+                                    <div class="day">2</div>
+                                    <div class="day">3</div>
+                                    <div class="day">4</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="date-preview">
+                            <div class="title">Time</div>
+                            <div class="date-preview-main">
+                                <div class="label">Select date</div>
+                                <div class="times">
+                                    <div class="time">09:00<br/>09:30</div>
+                                    <div class="time selected">09:00<br/>09:30</div>
+                                    <div class="time">09:00<br/>09:30</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="content-bottom">
+                    <div class="left">
+                        <div class="back">BACK</div>
+                        <div class="info">
+                            <img class="info-img" src="./images/info.svg" alt="Info" />
+                            <div class="info-text">SELECT DATE & TIME</div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="next">NEXT</div>
                     </div>
                 </div>
             </div>
