added animations, functions for displaying calendar depending on current date

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 </div>
                 <div id="contentBox" class="content-main">
                     <!-- Defaul Option -->
+                    <div id="optionsContainer" class="options"></div>
                     <!-- <div class="option">
                         <div class="option-img">
                             <img src="./images/alex.png" alt="Alex Rosetta" />
@@ -49,14 +50,14 @@
                         <div class="option-description">alexyrosetta@egmail.com</div>
                         <div class="option-price">50$</div>
                     </div> -->
-                    <!-- <div class="date">
+                    <div id="dateContainer" class="date">
                         <div class="date-calendar">
                             <div class="navigator">
                                 <div class="navigator-prev">
                                     <img src="./images/left.svg" alt="Pervious month">
                                 </div>
                                 <div class="navigator-current">August 2023</div>
-                                <div class="navigator-next">
+                                <div id="nextDate" class="navigator-next">
                                     <img src="./images/right.svg" alt="Next month">
                                 </div>
                             </div>
@@ -70,8 +71,8 @@
                                     <div class="weekday">Fri</div>
                                     <div class="weekday">Sat</div>
                                 </div>
-                                <div class="days">
-                                    <div class=""></div>
+                                <div id="daysContainer" class="days">
+                                    <!-- <div class=""></div>
                                     <div class="day">1</div>
                                     <div class="day active">2</div>
                                     <div class="day">3</div>
@@ -87,7 +88,7 @@
                                     <div class="day">1</div>
                                     <div class="day">2</div>
                                     <div class="day">3</div>
-                                    <div class="day">4</div>
+                                    <div class="day">4</div> -->
                                 </div>
                             </div>
                         </div>
@@ -102,7 +103,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="content-bottom">
                     <div class="left">
