added available days and optimized displaying the days of month

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                     <div id="dateContainer" class="date">
                         <div class="date-calendar">
                             <div class="navigator">
-                                <div class="navigator-prev">
+                                <div id="backDate" class="navigator-prev">
                                     <img src="./images/left.svg" alt="Pervious month">
                                 </div>
-                                <div class="navigator-current">August 2023</div>
+                                <div id="dateLabel" class="navigator-current">August 2023</div>
                                 <div id="nextDate" class="navigator-next">
                                     <img src="./images/right.svg" alt="Next month">
                                 </div>
