added selecting days and viewing appropriate times

--- a/index.html
+++ b/index.html
@@ -95,12 +95,8 @@
                         <div class="date-preview">
                             <div class="title">Time</div>
                             <div class="date-preview-main">
-                                <div class="label">Select date</div>
-                                <div class="times">
-                                    <div class="time">09:00<br/>09:30</div>
-                                    <div class="time selected">09:00<br/>09:30</div>
-                                    <div class="time">09:00<br/>09:30</div>
-                                </div>
+                                <div id="timeLabel" class="label">Select date</div>
+                                <div id="timesContainer" class="times"></div>
                             </div>
                         </div>
                     </div>
