optimized css and added more specific comments

--- a/index.html
+++ b/index.html
@@ -34,22 +34,6 @@
                 <div id="contentBox" class="content-main">
                     <!-- Defaul Option -->
                     <div id="optionsContainer" class="options"></div>
-                    <!-- <div class="option">
-                        <div class="option-img">
-                            <img src="./images/alex.png" alt="Alex Rosetta" />
-                        </div>
-                        <div class="option-title">Alex Rosetta</div>
-                        <div class="option-description">alexyrosetta@egmail.com</div>
-                    </div> -->
-                    <!-- Option with Price -->
-                    <!-- <div class="option service">
-                        <div class="option-img">
-                            <img src="./images/oral.png" alt="Alex Rosetta" />
-                        </div>
-                        <div class="option-title">Alex Rosetta</div>
-                        <div class="option-description">alexyrosetta@egmail.com</div>
-                        <div class="option-price">50$</div>
-                    </div> -->
                     <div id="dateContainer" class="date">
                         <div class="date-calendar">
                             <div class="navigator">
@@ -71,25 +55,7 @@
                                     <div class="weekday">Fri</div>
                                     <div class="weekday">Sat</div>
                                 </div>
-                                <div id="daysContainer" class="days">
-                                    <!-- <div class=""></div>
-                                    <div class="day">1</div>
-                                    <div class="day active">2</div>
-                                    <div class="day">3</div>
-                                    <div class="day">4</div>
-                                    <div class="day">1</div>
-                                    <div class="day">2</div>
-                                    <div class="day">3</div>
-                                    <div class="day">4</div>
-                                    <div class="day">1</div>
-                                    <div class="day">2</div>
-                                    <div class="day">3</div>
-                                    <div class="day">4</div>
-                                    <div class="day">1</div>
-                                    <div class="day">2</div>
-                                    <div class="day">3</div>
-                                    <div class="day">4</div> -->
-                                </div>
+                                <div id="daysContainer" class="days"></div>
                             </div>
                         </div>
                         <div class="date-preview">
@@ -106,7 +72,7 @@
                         <div id="backBtn" class="back">BACK</div>
                         <div class="info">
                             <img class="info-img" src="./images/info.svg" alt="Info" />
-                            <div class="info-text">SELECT DATE & TIME</div>
+                            <div class="info-text"></div>
                         </div>
                     </div>
                     <div class="right">
