optimized the code for better performance, addded Readme.md

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="content">
                 <div class="content-top">
-                    <h1 class="process-title">Select staff</h1>
+                    <h1 id="processTitle" class="process-title">Select staff</h1>
                 </div>
                 <div id="contentBox" class="content-main">
                     <!-- Defaul Option -->
